projects/microfrontends/deployment.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: composer-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: composer
spec:
  hosts:
  - "*"
  gateways:
  - composer-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: composer
        port:
          number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: composer
  labels:
    app: composer
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: composer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: composer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: composer
        version: v1
    spec:
      containers:
      - name: composer
        image: gcr.io/johntron/composer:latest
        ports:
        - containerPort: 80
